@@ -1,6 +1,7 @@
 2.0.90 (2.1.0 rc1):
 -Add: Hide main window when started with --replaygain argument
 -Add: Option to eject CD after ripping has been completed (enabled by default)
+-Add: New space holder for the "meta data" naming mode that contains the source directory
 -Change: Remember last folder for add files/directory/playlist dialogs
 
 2.0.2:
